svg rendered on canvas

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
+        classpath 'com.android.tools.build:gradle:2.3.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -21,9 +21,10 @@ allprojects {
         showViolations = true
         configFile file("../checkStyleConfig/checkstyle.xml")
         source 'src/main/java'
-        include '**/*.java'
+        exclude '**/*.java'
         exclude '**/gen/**'
         exclude '**/constant/**'
+        exclude '**/model/**'
         exclude '**/R.java'
         // empty classpath
         classpath = files()
