--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.caverock:androidsvg:1.2.2-beta-1'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.github.QuadFlask:colorpicker:0.0.13'
     compile 'com.makeramen:roundedimageview:2.3.0'
